// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavSide avoid including children dom when patterns are empty 1`] = `
<ul class="nav-side">
  <li class="item"><button class="anchor">
      Empty
    </button>
    <!---->
  </li>
  <li class="item"><button class="anchor current">
      Empty Selected
    </button>
    <!---->
  </li>
</ul>
`;

exports[`NavSide highlight current component 1`] = `
<ul class="nav-side">
  <li class="item"><button class="anchor current">
      Foo
    </button>
    <div class="child-wrapper">
      <ul class="child-list">
        <li class="child-item"><a href="#/Foo/Pattern%201" class="child-anchor">
            Pattern 1
          </a></li>
        <li class="child-item"><a href="#/Foo/Pattern%202" class="child-anchor">
            Pattern 2
          </a></li>
      </ul>
    </div>
  </li>
  <li class="item"><button class="anchor">
      Bar
    </button>
    <div class="child-wrapper" style="display: none;">
      <ul class="child-list">
        <li class="child-item"><a href="#/Bar/Pattern%201" class="child-anchor">
            Pattern 1
          </a></li>
      </ul>
    </div>
  </li>
</ul>
`;

exports[`NavSide highlight current pattern 1`] = `
<ul class="nav-side">
  <li class="item"><button class="anchor current">
      Foo
    </button>
    <div class="child-wrapper">
      <ul class="child-list">
        <li class="child-item"><a href="#/Foo/Pattern%201" class="child-anchor current">
            Pattern 1
          </a></li>
        <li class="child-item"><a href="#/Foo/Pattern%202" class="child-anchor">
            Pattern 2
          </a></li>
      </ul>
    </div>
  </li>
  <li class="item"><button class="anchor">
      Bar
    </button>
    <div class="child-wrapper" style="display: none;">
      <ul class="child-list">
        <li class="child-item"><a href="#/Bar/Pattern%201" class="child-anchor">
            Pattern 1
          </a></li>
      </ul>
    </div>
  </li>
</ul>
`;

exports[`NavSide renders declarations 1`] = `
<ul class="nav-side">
  <li class="item"><button class="anchor">
      Foo
    </button>
    <div class="child-wrapper" style="display: none;">
      <ul class="child-list">
        <li class="child-item"><a href="#/Foo/Pattern%201" class="child-anchor">
            Pattern 1
          </a></li>
        <li class="child-item"><a href="#/Foo/Pattern%202" class="child-anchor">
            Pattern 2
          </a></li>
      </ul>
    </div>
  </li>
  <li class="item"><button class="anchor">
      Bar
    </button>
    <div class="child-wrapper" style="display: none;">
      <ul class="child-list">
        <li class="child-item"><a href="#/Bar/Pattern%201" class="child-anchor">
            Pattern 1
          </a></li>
      </ul>
    </div>
  </li>
</ul>
`;
